[gd_scene load_steps=5 format=3 uid="uid://bfohes30a6o1a"]

[ext_resource type="Script" uid="uid://haiwmhxrj4wn" path="res://scripts/core/cover_point.gd" id="1"]
[ext_resource type="Script" uid="uid://lt8hjnde36bw" path="res://scripts/core/cover_camera_debug.gd" id="2"]

[sub_resource type="StandardMaterial3D" id="mat_debug"]
albedo_color = Color(0.5, 0.5, 0.5, 0.3)

[sub_resource type="BoxMesh" id="mesh_debug"]
material = SubResource("mat_debug")
size = Vector3(1.5, 1.5, 0.3)

[node name="CoverPoint" type="Node3D"]
script = ExtResource("1")

[node name="DebugMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("mesh_debug")

[node name="PlayerAnchor_Left" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0, 0.48181462)
gizmo_extents = 0.3

[node name="PlayerAnchor_Right" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0, 0.48181462)
gizmo_extents = 0.3

[node name="CameraAnchor_Left" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2.5, 3)
gizmo_extents = 0.5

[node name="CameraAnchor_Right" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.5, 3)
gizmo_extents = 0.5

[node name="DebugCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2.5, 3)
script = ExtResource("2")
